--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -136,6 +136,9 @@
     <Compile Include="Bing\BingMapsLocationProvider.cs" />
     <Compile Include="Bing\LocationData.cs" />
     <Compile Include="CommonActionChangedEventArgs.cs" />
+    <Compile Include="CompilerServices\IsExternalInit.cs" />
+    <Compile Include="ComponentModel\IViewModelStore.cs" />
+    <Compile Include="ComponentModel\ServiceProviderExtras.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Controls\AirQualityViewModel.cs" />
     <Compile Include="Controls\BaseForecastItemViewModel.cs" />
@@ -145,7 +148,8 @@
     <Compile Include="Controls\ForecastItemViewModel.cs" />
     <Compile Include="Controls\HourlyForecastItemViewModel.cs" />
     <Compile Include="Controls\ImageDataViewModel.cs" />
-    <Compile Include="Controls\LocationQueryViewModel.cs" />
+    <Compile Include="Controls\WeatherUiModelExtensions.cs" />
+    <Compile Include="Location\LocationQuery.cs" />
     <Compile Include="Controls\MoonPhaseViewModel.cs" />
     <Compile Include="Controls\PollenViewModel.cs" />
     <Compile Include="Controls\ProviderEntry.cs" />
@@ -153,7 +157,7 @@
     <Compile Include="Controls\UVIndexViewModel.cs" />
     <Compile Include="Controls\WeatherAlertsViewModel.cs" />
     <Compile Include="Controls\WeatherAlertViewModel.cs" />
-    <Compile Include="Controls\WeatherNowViewModel.cs" />
+    <Compile Include="Controls\WeatherUiModel.cs" />
     <Compile Include="Controls\DetailsMap.cs" />
     <Compile Include="Controls\DetailsMap.Dictionary.cs" />
     <Compile Include="DAO\LocationData.cs" />
@@ -198,8 +202,13 @@
     <Compile Include="Keys\MeteoFranceKey.cs" />
     <Compile Include="Keys\WUnlockedKey.cs" />
     <Compile Include="Location\ILocationProviderImpl.cs" />
+    <Compile Include="Location\Location.cs" />
     <Compile Include="Location\LocationData.cs" />
+    <Compile Include="Location\LocationDataExtras.cs" />
+    <Compile Include="Location\LocationExtras.cs" />
+    <Compile Include="Location\LocationProvider.cs" />
     <Compile Include="Location\LocationProviderImpl.cs" />
+    <Compile Include="Location\LocationResult.cs" />
     <Compile Include="MeteoFrance\AlertsRootobject.cs" />
     <Compile Include="MeteoFrance\CurrentsRootobject.cs" />
     <Compile Include="MeteoFrance\ForecastRootobject.cs" />
@@ -314,6 +323,9 @@
     <Compile Include="UWP\Utils\FileUtils.cs" />
     <Compile Include="UWP\Utils\Settings.cs" />
     <Compile Include="ComponentModel\IViewModel.cs" />
+    <Compile Include="ViewModels\ErrorMessage.cs" />
+    <Compile Include="ViewModels\WeatherNowViewModel.cs" />
+    <Compile Include="ViewModels\WeatherNowViewModelExtras.cs" />
     <Compile Include="WeatherApi\ForecastRootobject.cs" />
     <Compile Include="WeatherApi\LocationData.cs" />
     <Compile Include="WeatherApi\LocationItem.cs" />
@@ -340,7 +352,6 @@
     <Compile Include="WeatherData\Images\Model\ImageData.cs" />
     <Compile Include="WeatherData\IPollenProvider.cs" />
     <Compile Include="WeatherData\IWeatherAlertProvider.cs" />
-    <Compile Include="WeatherData\IWeatherErrorListener.cs" />
     <Compile Include="WeatherData\IWeatherProviderImpl.cs" />
     <Compile Include="WeatherData\WeatherBackground.cs" />
     <Compile Include="WeatherData\WeatherDataLoader.cs" />
@@ -358,6 +369,9 @@
   <ItemGroup>
     <PackageReference Include="CacheCow.Client">
       <Version>2.11.3</Version>
+    </PackageReference>
+    <PackageReference Include="CommunityToolkit.Mvvm">
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="FirebaseAuthentication.net">
       <Version>3.7.2</Version>
