--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -174,6 +174,7 @@
     <Compile Include="BackgroundTasks\DailyNotificationTask.cs" />
     <Compile Include="BackgroundTasks\UpdateTask.cs" />
     <Compile Include="BackgroundTasks\WeatherTileUpdaterTask.cs" />
+    <Compile Include="CompilerServices\IsExternalInit.cs" />
     <Compile Include="Controls\AlignableWrapPanel.cs" />
     <Compile Include="Controls\AQIForecastControl.xaml.cs">
       <DependentUpon>AQIForecastControl.xaml</DependentUpon>
@@ -369,6 +370,7 @@
     <Compile Include="Utf8JsonGen\Utf8JsonGenerated.cs" />
     <Compile Include="Utils\FeatureSettings.cs" />
     <Compile Include="Utils\FeatureSettings.SettingsChangedEvent.cs" />
+    <Compile Include="ViewModels\LocationsViewModel.cs" />
     <Compile Include="WeatherAlerts\WeatherAlertHandler.cs" />
     <Compile Include="BackgroundTasks\WeatherUpdateBackgroundTask.cs" />
     <Compile Include="Controls\KeyEntryDialog.xaml.cs">
@@ -377,7 +379,7 @@
     <Compile Include="Controls\LocationPanel.xaml.cs">
       <DependentUpon>LocationPanel.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\ViewModels\LocationPanelViewModel.cs" />
+    <Compile Include="Controls\ViewModels\LocationPanelUiModel.cs" />
     <Compile Include="Controls\Snackbar\SnackbarManager.cs" />
     <Compile Include="Controls\Toast.cs" />
     <Compile Include="Notifications\WeatherAlertCreator.cs" />
