--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -636,6 +636,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm">
       <Version>8.0.0</Version>
     </PackageReference>
+    <PackageReference Include="KeyedSemaphores">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AppCenter">
       <Version>4.5.3</Version>
     </PackageReference>
