--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -312,8 +312,8 @@
     <PackageReference Include="System.Text.Json">
       <Version>7.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Utf8Json">
-      <Version>1.3.7</Version>
+    <PackageReference Include="ZCS.Utf8Json">
+      <Version>1.4.4</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
