--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -665,19 +665,19 @@
       <Version>10.1901.28001</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>7.1.2</Version>
+      <Version>7.1.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
-      <Version>7.1.2</Version>
+      <Version>7.1.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI">
-      <Version>7.1.2</Version>
+      <Version>7.1.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls.Core">
-      <Version>7.1.2</Version>
+      <Version>7.1.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls.Layout">
-      <Version>7.1.2</Version>
+      <Version>7.1.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Lottie">
       <Version>7.1.1</Version>
@@ -691,11 +691,11 @@
     <PackageReference Include="System.Runtime.InteropServices">
       <Version>4.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Utf8Json">
-      <Version>1.3.7</Version>
-    </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.26.0</Version>
+    </PackageReference>
+    <PackageReference Include="ZCS.Utf8Json">
+      <Version>1.4.4</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
