--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.23">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0-ios;net7.0-macos;net7.0-maccatalyst;net7.0-android</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net7.0-ios;net7.0-maccatalyst;net7.0-android</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">uap10.0.19041;$(TargetFrameworks)</TargetFrameworks>
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
@@ -17,8 +17,8 @@
   </ItemGroup>
   <ItemGroup Condition="!$(TargetFramework.StartsWith('uap'))">
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp" Version="7.1.11" />
-    <PackageReference Include="Uno.UI" Version="4.6.19" />
-    <PackageReference Include="Uno.UI.Lottie" Version="4.6.19" />
+    <PackageReference Include="Uno.UI" Version="4.6.39" />
+    <PackageReference Include="Uno.UI.Lottie" Version="4.6.39" />
   </ItemGroup>
   <ItemGroup Condition="!$(TargetFramework.StartsWith('uap'))">
     <Content Include="Assets\**" />
