--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/iOS/Info.plist
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/iOS/Info.plist
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
+<dict>
 	<key>CFBundleDisplayName</key>
-	<string>SimpleWeather.Uno</string>
+	<string>SimpleWeather</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.SimpleWeather.Uno</string>
+	<string>com.thewizrd.simpleweather.debug</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -14,32 +14,32 @@
 	<true/>
 	<key>UIDeviceFamily</key>
 	<array>
-	  <integer>1</integer>
-	  <integer>2</integer>
+		<integer>1</integer>
+		<integer>2</integer>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
-	  <string>armv7</string>
-	  <string>arm64</string>
+		<string>armv7</string>
+		<string>arm64</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
-	  <string>UIInterfaceOrientationPortrait</string>
-	  <string>UIInterfaceOrientationLandscapeLeft</string>
-	  <string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
-	  <string>UIInterfaceOrientationPortrait</string>
-	  <string>UIInterfaceOrientationPortraitUpsideDown</string>
-	  <string>UIInterfaceOrientationLandscapeLeft</string>
-	  <string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
-	  <string>Fonts/uno-fluentui-assets.ttf</string>
+		<string>Fonts/uno-fluentui-assets.ttf</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
@@ -53,11 +53,7 @@
 	<string>Media.xcassets/AppIcons.appiconset</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-
-	<!--
-	Adjust this to your application's encryption usage.
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	-->
-  </dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>User can optionally request location access to retrieve the weather data for their current location</string>
+</dict>
 </plist>
