--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/macOS/Info.plist
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/macOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleName</key>
-	<string>SimpleWeather.Uno.macOS</string>
+	<string>SimpleWeather</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.SimpleWeather.Uno-macOS</string>
+	<string>com.thewizrd.simpleweather.debug</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -28,11 +28,7 @@
 	<string>Assets.xcassets/AppIcons.appiconset</string>
 	<key>ATSApplicationFontsPath</key>
 	<string>Fonts/uno-fluentui-assets.ttf</string>
-
-	<!--
-	Adjust this to your application's encryption usage.
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	-->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>User can optionally request location access to retrieve the weather data for their current location</string>
 </dict>
 </plist>
