--- a/SimpleWeather.Weather-API/SimpleWeather.Weather-API.csproj
+++ b/SimpleWeather.Weather-API/SimpleWeather.Weather-API.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="MSBuild.Sdk.Extras/3.0.23">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0-ios;net7.0-macos;net7.0-maccatalyst;net7.0-android</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net7.0-ios;net7.0-maccatalyst;net7.0-android</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">uap10.0.19041;$(TargetFrameworks)</TargetFrameworks>
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
@@ -13,7 +13,7 @@
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
   </PropertyGroup>
   <ItemGroup Condition="!$(TargetFramework.StartsWith('uap'))">
-    <PackageReference Include="Uno.UI" Version="4.6.19" />
+    <PackageReference Include="Uno.UI" Version="4.6.39" />
   </ItemGroup>
   <ItemGroup Condition="!$(TargetFramework.StartsWith('uap'))">
     <Content Include="Assets\**" />
