--- a/SimpleWeather.Common/SimpleWeather.Common.csproj
+++ b/SimpleWeather.Common/SimpleWeather.Common.csproj
@@ -14,7 +14,7 @@
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
 	</ItemGroup>
 	<ItemGroup Condition="!$(TargetFramework.StartsWith('uap'))">
-		<PackageReference Include="Uno.UI" Version="4.6.39" />
+		<PackageReference Include="Uno.UI" Version="4.7.0-dev.770" />
 	</ItemGroup>
 	<ItemGroup Condition="!$(TargetFramework.StartsWith('uap'))">
 		<Content Include="Assets\**" />
