--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/MacCatalyst/Info.plist
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/MacCatalyst/Info.plist
@@ -34,5 +34,7 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>User can optionally request location access to retrieve the weather data for their current location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>User can optionally request location access to retrieve the weather data for their current location</string>
 </dict>
 </plist>
