--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
@@ -2,8 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net7.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="'$(Configuration)' != 'Debug|Mac'">$(TargetFrameworks);net7.0-ios</TargetFrameworks>
-		<TargetFrameworks Condition="'$(Configuration)' != 'Debug|Mac'">$(TargetFrameworks);net7.0-android</TargetFrameworks>
+		<TargetFrameworks Condition="'$(Configuration)' != 'Debug|Mac'">$(TargetFrameworks);net7.0-ios;net7.0-android</TargetFrameworks>
 		<!-- Disabled because of https://github.com/xamarin/xamarin-macios/issues/16401-->
 		<SingleProject>true</SingleProject>
 		<OutputType>Exe</OutputType>
@@ -53,13 +52,14 @@
 		<PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.3" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.3" />
-		<PackageReference Include="Uno.Material" Version="2.4.1" />
-		<PackageReference Include="Uno.UI" Version="4.6.39" />
-		<PackageReference Include="Uno.UI.Lottie" Version="4.6.39" />
-		<PackageReference Include="Uno.UI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
+		<PackageReference Include="Uno.Material" Version="2.5.0-dev.6" />
+		<PackageReference Include="Uno.Toolkit.UI" Version="2.5.0-dev.6" />
+		<PackageReference Include="Uno.UI" Version="4.7.0-dev.770" />
+		<PackageReference Include="Uno.UI.Lottie" Version="4.7.0-dev.770" />
+		<PackageReference Include="Uno.UI.RemoteControl" Version="4.7.0-dev.770" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.770" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-		<PackageReference Include="Uno.UI.Svg" Version="4.6.39" />
+		<PackageReference Include="Uno.UI.Svg" Version="4.7.0-dev.770" />
 		<!-- UWP Toolkit -->
 		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp" Version="7.1.11" />
 		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
