--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/iOS/Info.plist
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/iOS/Info.plist
@@ -55,5 +55,7 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>User can optionally request location access to retrieve the weather data for their current location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>User can optionally request location access to retrieve the weather data for their current location</string>
 </dict>
 </plist>
