--- a/SimpleWeather.Uno/SimpleWeather.Uno.Skia.Gtk/SimpleWeather.Uno.Skia.Gtk.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Skia.Gtk/SimpleWeather.Uno.Skia.Gtk.csproj
@@ -17,15 +17,16 @@
     <PackageReference Include="KeyedSemaphores" Version="3.1.0" />
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.3" />
-    <PackageReference Include="Uno.Material" Version="2.4.1" />
+    <PackageReference Include="Uno.Material" Version="2.5.0-dev.6" />
+    <PackageReference Include="Uno.Toolkit.UI" Version="2.5.0-dev.8" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Core" Version="7.1.11" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Layout" Version="7.1.11" />
-    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.6.39" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
+    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.7.0-dev.770" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.7.0-dev.770" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.770" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-    <PackageReference Include="Uno.UI.Lottie" Version="4.6.39" />
+    <PackageReference Include="Uno.UI.Lottie" Version="4.7.0-dev.770" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SimpleWeather.Backgrounds\SimpleWeather.Backgrounds.csproj" />
