--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
@@ -53,7 +53,7 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.3" />
 		<PackageReference Include="Uno.Material" Version="2.5.0-dev.6" />
-		<PackageReference Include="Uno.Toolkit.UI" Version="2.5.0-dev.6" />
+		<PackageReference Include="Uno.Toolkit.UI.Material" Version="2.5.0-dev.8" />
 		<PackageReference Include="Uno.UI" Version="4.7.0-dev.770" />
 		<PackageReference Include="Uno.UI.Lottie" Version="4.7.0-dev.770" />
 		<PackageReference Include="Uno.UI.RemoteControl" Version="4.7.0-dev.770" Condition="'$(Configuration)'=='Debug'" />
