--- a/SimpleWeather.Uno/SimpleWeather.Uno.Skia.Gtk/SimpleWeather.Uno.Skia.Gtk.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Skia.Gtk/SimpleWeather.Uno.Skia.Gtk.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.3" />
     <PackageReference Include="Uno.Material" Version="2.5.0-dev.6" />
-    <PackageReference Include="Uno.Toolkit.UI" Version="2.5.0-dev.8" />
+    <PackageReference Include="Uno.Toolkit.UI.Material" Version="2.5.0-dev.8" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Core" Version="7.1.11" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Layout" Version="7.1.11" />
