--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/iOS/Info.plist
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/iOS/Info.plist
@@ -40,6 +40,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Fonts/uno-fluentui-assets.ttf</string>
+		<string>Fonts/MaterialIcons-Regular.ttf</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
