--- a/SimpleWeather.Uno/SimpleWeather.Uno.Skia.Gtk/SimpleWeather.Uno.Skia.Gtk.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Skia.Gtk/SimpleWeather.Uno.Skia.Gtk.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.770" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.UI.Lottie" Version="4.7.0-dev.770" />
+    <PackageReference Include="Uno.UI.Svg" Version="4.7.0-dev.770" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SimpleWeather.Backgrounds\SimpleWeather.Backgrounds.csproj" />
