--- a/SimpleWeather.Uno/SimpleWeather.Uno.UWP/SimpleWeather.Uno.Uwp.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.UWP/SimpleWeather.Uno.Uwp.csproj
@@ -291,6 +291,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="Assets\Fonts\MaterialIcons-Regular.ttf" />
     <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
