--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
@@ -53,18 +53,19 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.3" />
 		<PackageReference Include="Uno.Material" Version="2.5.0-dev.6" />
-		<PackageReference Include="Uno.Toolkit.UI.Material" Version="2.5.0-dev.8" />
-		<PackageReference Include="Uno.UI" Version="4.7.0-dev.770" />
-		<PackageReference Include="Uno.UI.Lottie" Version="4.7.0-dev.770" />
-		<PackageReference Include="Uno.UI.RemoteControl" Version="4.7.0-dev.770" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.770" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-		<PackageReference Include="Uno.UI.Svg" Version="4.7.0-dev.770" />
-		<!-- UWP Toolkit -->
-		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp" Version="7.1.11" />
-		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
-		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Core" Version="7.1.11" />
-		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Layout" Version="7.1.11" />
+    <PackageReference Include="Uno.Toolkit.UI.Material" Version="2.5.0-dev.8" />
+    <PackageReference Include="Uno.UI" Version="4.7.0-dev.770" />
+    <PackageReference Include="Uno.UI.Lottie" Version="4.7.0-dev.770" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.7.0-dev.770" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.770" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Uno.UI.Svg" Version="4.7.0-dev.770" />
+    <!-- UWP Toolkit -->
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp" Version="7.1.11" />
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Core" Version="7.1.11" />
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.Layout" Version="7.1.11" />
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Media" Version="7.1.11" />
 		<!-- Common -->
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 		<PackageReference Include="KeyedSemaphores" Version="3.1.0" />
