--- a/SimpleWeather.Uno/SimpleWeather.Uno.UWP/SimpleWeather.Uno.Uwp.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.UWP/SimpleWeather.Uno.Uwp.csproj
@@ -48,6 +48,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Lottie">
       <Version>7.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Media">
+      <Version>7.1.3</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml" Version="2.8.1" />
     <PackageReference Include="SkiaSharp.Extended">
       <Version>1.60.0</Version>
