--- a/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Mobile/SimpleWeather.Uno.Mobile.csproj
@@ -26,6 +26,25 @@
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-android|AnyCPU'">
 		<AndroidEnableMultiDex>True</AndroidEnableMultiDex>
+		<CustomCommands>
+		  <CustomCommands>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Shared/Keys</command>
+		      <workingdir></workingdir>
+		    </Command>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Weather-API/Keys</command>
+		      <workingdir></workingdir>
+		    </Command>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/EditManifest/bin/Release/net7.0/publish/EditManifest MacCatalyst/Info.plist "Debug"</command>
+		      <workingdir></workingdir>
+		    </Command>
+		  </CustomCommands>
+		</CustomCommands>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-android|AnyCPU'">
 		<AndroidEnableMultiDex>True</AndroidEnableMultiDex>
@@ -33,6 +52,25 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 		<CodesignEntitlements>iOS\Entitlements.plist</CodesignEntitlements>
 		<CreatePackage>false</CreatePackage>
+		<CustomCommands>
+		  <CustomCommands>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Shared/Keys</command>
+		      <workingdir></workingdir>
+		    </Command>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Weather-API/Keys</command>
+		      <workingdir></workingdir>
+		    </Command>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/EditManifest/bin/Release/net7.0/publish/EditManifest iOS/Info.plist "Debug"</command>
+		      <workingdir></workingdir>
+		    </Command>
+		  </CustomCommands>
+		</CustomCommands>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
 		<CodesignEntitlements>iOS\Entitlements.plist</CodesignEntitlements>
@@ -54,25 +92,26 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.3" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.6" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.8" />
-    <PackageReference Include="Uno.WinUI" Version="4.7.0-dev.770" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.0-dev.770" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.770" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.770" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-    <PackageReference Include="Uno.WinUI.Svg" Version="4.7.0-dev.770" />
-    <!-- Community Toolkit -->
-    <PackageReference Include="Uno.CommunityToolkit.WinUI" Version="7.1.100" />
-    <PackageReference Include="Uno.CommunityToolkit.WinUI.UI" Version="7.1.100" />
-    <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.Core" Version="7.1.100" />
-    <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.Layout" Version="7.1.100" />
-    <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Media" Version="7.1.100" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.8" />
+		<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.908" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.7.0-dev.908" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.908" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.908" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageReference Include="Uno.WinUI.Svg" Version="4.7.0-dev.908" />
+		<!-- Community Toolkit -->
+		<PackageReference Include="Uno.CommunityToolkit.WinUI" Version="7.1.100" />
+		<PackageReference Include="Uno.CommunityToolkit.WinUI.UI" Version="7.1.100" />
+		<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.Core" Version="7.1.100" />
+		<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.Layout" Version="7.1.100" />
+		<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Media" Version="7.1.100" />
 		<!-- Common -->
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 		<PackageReference Include="KeyedSemaphores" Version="3.1.0" />
 		<PackageReference Condition="'$(TargetFramework)' != 'net7.0-maccatalyst'" Include="Microsoft.AppCenter.Analytics" Version="5.0.1" />
 		<PackageReference Condition="'$(TargetFramework)' != 'net7.0-maccatalyst'" Include="Microsoft.AppCenter.Crashes" Version="5.0.1" />
 		<PackageReference Include="ZCS.Utf8Json" Version="1.4.4" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Cupertino" Version="2.5.0-dev.11" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\SimpleWeather.Backgrounds\SimpleWeather.Backgrounds.csproj" />
@@ -293,4 +332,46 @@
 	  </CustomCommands>
 	</PropertyGroup>
 	-->
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+	  <CustomCommands>
+	    <CustomCommands>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Shared/Keys</command>
+	        <workingdir></workingdir>
+	      </Command>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Weather-API/Keys</command>
+	        <workingdir></workingdir>
+	      </Command>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/EditManifest/bin/Release/net7.0/publish/EditManifest MacCatalyst/Info.plist "Debug"</command>
+	        <workingdir></workingdir>
+	      </Command>
+	    </CustomCommands>
+	  </CustomCommands>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+	  <CustomCommands>
+	    <CustomCommands>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Shared/Keys</command>
+	        <workingdir></workingdir>
+	      </Command>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/KeyCheck/bin/Release/net7.0/publish/KeyCheck /Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/SimpleWeather.Weather-API/Keys</command>
+	        <workingdir></workingdir>
+	      </Command>
+	      <Command>
+	        <type>BeforeBuild</type>
+	        <command>/Users/dave.b.antoine/SimpleWeather/SimpleWeather.Uno/EditManifest/bin/Release/net7.0/publish/EditManifest MacCatalyst/Info.plist "Release"</command>
+	        <workingdir></workingdir>
+	      </Command>
+	    </CustomCommands>
+	  </CustomCommands>
+	</PropertyGroup>
 </Project>
