--- a/SimpleWeather.Windows/SimpleWeather.Windows.csproj
+++ b/SimpleWeather.Windows/SimpleWeather.Windows.csproj
@@ -15,6 +15,8 @@
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
     <GenerateTemporaryStoreCertificate>True</GenerateTemporaryStoreCertificate>
+    <Title>SimpleWeather</Title>
+    <ApplicationIcon>Assets\logo.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
