--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,10 @@
 <Project>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-  	<Version>$(VersionPrefix)5.2.7.0</Version>
+  	<Version>$(VersionPrefix)5.7.2.0</Version>
+    <!-- Version Code Format (.NET Version, App Version, Build Number) -->
+    <VersionCode Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) != 'windows'">757200</VersionCode>
+    <VersionCode Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">0</VersionCode>
   </PropertyGroup>
 
   <PropertyGroup>
